fix spacing issue 4

--- a/web/stylesheets/main.css
+++ b/web/stylesheets/main.css
@@ -24,7 +24,7 @@ body{
  width: 35%;
  height: 100%;
  padding: 30px;
- padding-top: 15%;
+ padding-top: 7.5%;
 }
 .yt-chat-container > .yt-chatbox{
 }
